@@ -1,3 +1,9 @@
+20010311
+ - OpenBSD CVS Sync
+   - markus@cvs.openbsd.org 2001/03/10 12:48:27
+     [sshconnect2.c]
+     ignore nonexisting private keys; report rjmooney@mediaone.net
+
 20010310
  - OpenBSD CVS Sync
    - deraadt@cvs.openbsd.org 2001/03/09 03:14:39
